--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/aburchette/angular-file-to-json",
   "devDependencies": {
     "grunt": "0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "0.11.0",
     "grunt-contrib-uglify": "0.7.0",
     "grunt-contrib-watch": "0.6.1",
