working on build, bower.json, and gitignore

--- a/bower.json
+++ b/bower.json
@@ -22,8 +22,11 @@
     "file"
   ],
   "ignore": [
-    "**/.*",
+    ".idea",
     "node_modules",
-    "bower_components"
+    "bower_components",
+    "src",
+    "Gruntfile.js",
+    ".gitignore"
   ]
 }
